# weAct_750vb

./: README.md  swdcheck.sh  weAct_750vb.code-workspace
mcuapp/: CMakeLists.txt  prj.conf
mcuapp/boards/: weact_stm32h750.conf  weact_stm32h750.overlay
mcuapp/src/: led.c
mcuboot/: README.md  prj.conf
mcuboot/boards/: weact_stm32h750.conf  weact_stm32h750.overlay
prj-learn/: CMakeLists.txt  prj.conf
prj-learn/boards/: mini_stm32h743.overlay  weact_stm32h750.overlay
prj-learn/src/: button.c
test_lvgl/: CMakeLists.txt  prj.conf
test_qspi_flash/: CMakeLists.txt  prj.conf
test_qspi_flash/boards/: weact_stm32h750.overlay
test_qspi_flash/src/: main.c
test_sdcard_fs/: CMakeLists.txt  prj.conf
test_sdcard_fs/boards/: weact_stm32h750.overlay
test_st7735/: CMakeLists.txt  prj.conf
test_st7735/src/: main.c
test_usb_cdc/: CMakeLists.txt  prj.conf
test_usb_cdc/boards/: weact_stm32h750.overlay
